# survey

./: .gitattributes  .gitignore  LICENSE.md  README.md  environment.yml  environment_macos.yml  environment_ubuntu.yml  pyproject.toml
.github/workflows/: python_tests.yml
src/survey/: __init__.py  cli.py  genplot.py  genutils.py  helpers.py
src/survey/datasets/: __init__.py  _datasets.py
src/survey/datasets/general/h5s/kidney/: wt_ms_kidney_5K.pkl
src/survey/singlecell/: __init__.py  celltype.py  datatypes.py  decorate.py  io.py  io2.py  iohelp.py  matrix.py  meta.py  obs.py  plotting.py  process.py  scutils.py
src/survey/spatial/: __init__.py  calling.py  core.py  plotting.py  segment.py  segutils.py
tests/: conftest.py  test_svc_io.py
