[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "survey"
version = "0.1.0"
description = "Analysis and processing spatially-resolved single-cell data"
authors = [
  { name = "George Hartoularos (ghart7)", email = "george.hartoularos@surveygenomics.com" }
]
readme = "README.md" # Point to your README file
license = { text = "MIT" } # Or another license like "BSD-3-Clause"
keywords = ["bioinformatics", "single-cell", "spatial", "genomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.0,<0.12.0",
    "matplotlib>=3.10.0,<3.11.0",
    "mudata>=0.3.2,<0.3.3",
    "numpy>=2.0.0,<2.1.0",
    "pandas>=2.2.0,<2.3.0",
    "scanpy>=1.10.0,<1.11.0",
    "scipy>=1.15.0,<1.16.0",
    "seaborn>=0.13.0,<0.14.0",
    "scikit-image>=0.25.0,<0.26.0",
    "anytree>=2.12.0,<2.13.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0", # Your version of pytest
    "pytest-cov",  # For test coverage reports
    "pytest-xdist", # For parallel test execution (optional)
    # Add any other test-specific plugins here
]

[project.urls]
"Homepage" = "https://github.com/survey-genomics/survey"
"Repository" = "https://github.com/survey-genomics/survey"
"Bug Tracker" = "https://github.com/survey-genomics/survey/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
zip-safe = false

[project.scripts]
survey = "survey.cli:main"
